--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,85 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = {'q': 1, 'op': 2}\n",
-    "e = None\n",
-    "f."
+    "from data_functions import read_pkl, write_json\n",
+    "from api_functions import get_match_info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'dict' and 'dict'",
+     "ename": "ValueError",
+     "evalue": "429",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43md\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mm\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m}\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'dict' and 'dict'"
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m game_data \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m game_id \u001b[38;5;129;01min\u001b[39;00m read_match_ids():\n\u001b[1;32m----> 3\u001b[0m     game_data\u001b[38;5;241m.\u001b[39mupdate(\u001b[43mget_match_info\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgame_id\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m      4\u001b[0m write_json(game_data, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/match_info.json\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\Adrien\\Documents\\Code\\RiotAPI\\api_functions.py:28\u001b[0m, in \u001b[0;36mget_match_info\u001b[1;34m(match_id)\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_match_info\u001b[39m(match_id):\n\u001b[1;32m---> 28\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mapi_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43mapi_endpoint\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/lol/match/v5/matches/\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mmatch_id\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Adrien\\Documents\\Code\\RiotAPI\\api_functions.py:16\u001b[0m, in \u001b[0;36mapi_call\u001b[1;34m(api_endpoint, params, api_source)\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\u001b[38;5;241m.\u001b[39mjson()\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 16\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(response\u001b[38;5;241m.\u001b[39mstatus_code)\n",
+      "\u001b[1;31mValueError\u001b[0m: 429"
      ]
     }
    ],
    "source": [
-    "import requests\n",
-    "puuid = \"X6eorlmrPyiYOP5tJ2eq7vBZistPMAnKA2-JKpBiRvlTSETpLb0bCxDso5H8vax78nCOzLElKaOvgg\"\n",
-    "params = {\"start\":0, \"count\":20}\n",
-    "response = requests.get(f\"https://europe.api.riotgames.com/lol/match/v5/matches/by-puuid/{puuid}/ids\", params={})\n",
-    "print(response.status_code)"
+    "game_data = []\n",
+    "for game_id in read_pkl():\n",
+    "    game_data.append({game_id : get_match_info(game_id)})\n",
+    "write_json(game_data, 'data/match_info.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1717249155"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import time\n",
-    "time.time()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "[{0: {'a': 1}}, {1: {'a': 1}}, {2: {'a': 1}}, {3: {'a': 1}}]\n"
      ]
     }
    ],
    "source": [
-    "print({\"start\": 0, \"count\": 100, \"endTime\": 1}.update({\"stezrart\": 0}))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'/lol/match/v5/matches/by-puuid/X6eorlmrPyiYOP5tJ2eq7vBZistPMAnKA2-JKpBiRvlTSETpLb0bCxDso5H8vax78nCOzLElKaOvgg/ids'"
+    "item = {'a': 1}\n",
+    "d = []\n",
+    "for i in range(4):\n",
+    "    d.append({i: item})\n",
+    "print(d)"
    ]
   }
  ],
