--- a/tests.ipynb
+++ b/tests.ipynb
@@ -1,61 +1,75 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "recuperer pour chaque game, le score, le nom du champion, et l'issue du match"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data_functions import read_pkl, write_json\n",
-    "from api_functions import get_match_info"
+    "from data_functions import read_pkl, MATCH_INFO_PATH\n",
+    "\n",
+    "all_matches_data = read_pkl(MATCH_INFO_PATH)\n",
+    "my_puuid = \"X6eorlmrPyiYOP5tJ2eq7vBZistPMAnKA2-JKpBiRvlTSETpLb0bCxDso5H8vax78nCOzLElKaOvgg\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "429",
+     "ename": "KeyError",
+     "evalue": "'championName'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m game_data \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m game_id \u001b[38;5;129;01min\u001b[39;00m read_match_ids():\n\u001b[1;32m----> 3\u001b[0m     game_data\u001b[38;5;241m.\u001b[39mupdate(\u001b[43mget_match_info\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgame_id\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m      4\u001b[0m write_json(game_data, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/match_info.json\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\Adrien\\Documents\\Code\\RiotAPI\\api_functions.py:28\u001b[0m, in \u001b[0;36mget_match_info\u001b[1;34m(match_id)\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_match_info\u001b[39m(match_id):\n\u001b[1;32m---> 28\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mapi_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43mapi_endpoint\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/lol/match/v5/matches/\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mmatch_id\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\Adrien\\Documents\\Code\\RiotAPI\\api_functions.py:16\u001b[0m, in \u001b[0;36mapi_call\u001b[1;34m(api_endpoint, params, api_source)\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\u001b[38;5;241m.\u001b[39mjson()\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 16\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(response\u001b[38;5;241m.\u001b[39mstatus_code)\n",
-      "\u001b[1;31mValueError\u001b[0m: 429"
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[31], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m     12\u001b[0m player_data \u001b[38;5;241m=\u001b[39m player_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchallenges\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m---> 13\u001b[0m champion_name \u001b[38;5;241m=\u001b[39m \u001b[43mplayer_data\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mchampionName\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m champion_name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m champions_highlights:\n\u001b[0;32m     15\u001b[0m     champions_highlights\u001b[38;5;241m.\u001b[39mupdate({champion_name: {key: player_data[key] \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m max_stats}})\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'championName'"
      ]
     }
    ],
    "source": [
-    "game_data = []\n",
-    "for game_id in read_pkl():\n",
-    "    game_data.append({game_id : get_match_info(game_id)})\n",
-    "write_json(game_data, 'data/match_info.json')"
+    "champions_highlights = dict()\n",
+    "max_stats = ['pentaKills', 'totalDamageDealtToChampions', 'skillshotsDodged', 'kills', 'deathsByEnemyChamps', 'damagePerMinute', 'teamDamagePercentage', 'goldEarned']\n",
+    "total_stats = ['pentaKills']\n",
+    "boolean_stats = ['win']\n",
+    "categorical_stats = ['role']\n",
+    "\n",
+    "for k in range(len(all_matches_data)):\n",
+    "    match_data = next(iter(all_matches_data[k].values()))\n",
+    "    for player_data in match_data['info']['participants']:\n",
+    "        if player_data['puuid'] != my_puuid:\n",
+    "            continue\n",
+    "        player_data = player_data['challenges']\n",
+    "        champion_name = player_data['championName']\n",
+    "        if champion_name not in champions_highlights:\n",
+    "            champions_highlights.update({champion_name: {key: player_data[key] for key in max_stats}})\n",
+    "            for key in total_stats:\n",
+    "                champions_highlights['champion_name'][f'total_{key}'] = player_data[key]\n",
+    "        else:\n",
+    "            for key in max_stats:\n",
+    "                if champions_highlights['champion_name'][key] < player_data[key]: player_data[key]\n",
+    "            for key in total_stats:\n",
+    "                champions_highlights['champion_name'][f'total_{key}'] += player_data[key]\n",
+    "\n",
+    "\n",
+    "champions_highlights.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{0: {'a': 1}}, {1: {'a': 1}}, {2: {'a': 1}}, {3: {'a': 1}}]\n"
-     ]
-    }
-   ],
-   "source": [
-    "item = {'a': 1}\n",
-    "d = []\n",
-    "for i in range(4):\n",
-    "    d.append({i: item})\n",
-    "print(d)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
