--- a/tests.ipynb
+++ b/tests.ipynb
@@ -108,6 +108,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'start': 1, 'count': 2, 'queue': None}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func(**kwargs):\n",
+    "    return kwargs\n",
+    "print(func(start=1, count=2, queue=None))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
