--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,13 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'data/highlights_Aram%20Bagarre_EUW.pkl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdata_functions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m read_pkl, HIGHLIGHTS_PATH\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mProfiles\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ADRIEN\n\u001b[1;32m----> 4\u001b[0m highlights_data \u001b[38;5;241m=\u001b[39m \u001b[43mread_pkl\u001b[49m\u001b[43m(\u001b[49m\u001b[43mHIGHLIGHTS_PATH\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mADRIEN\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msuffix\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Adrien\\Documents\\Code\\RiotAPI\\data_functions.py:15\u001b[0m, in \u001b[0;36mread_pkl\u001b[1;34m(path)\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mread_pkl\u001b[39m(path):\n\u001b[1;32m---> 15\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m.pkl\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m     16\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m pickle\u001b[38;5;241m.\u001b[39mload(f)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data/highlights_Aram%20Bagarre_EUW.pkl'"
+     ]
+    }
+   ],
    "source": [
     "from data_functions import read_pkl, HIGHLIGHTS_PATH\n",
+    "from Profiles import ADRIEN\n",
     "\n",
-    "highlights_data = read_pkl(HIGHLIGHTS_PATH)"
+    "highlights_data = read_pkl(HIGHLIGHTS_PATH+ADRIEN.suffix)"
    ]
   },
   {
@@ -123,6 +137,59 @@
     "def func(**kwargs):\n",
     "    return kwargs\n",
     "print(func(start=1, count=2, queue=None))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {}\n",
+    "print('a' in d)\n",
+    "d['a'] = 1\n",
+    "print('a' in d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1', '2', '3', '4']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = ['1', '2']\n",
+    "b = ['3', '4']\n",
+    "a+b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val = '4'\n",
+    "d[val] = 4"
    ]
   },
   {
