Adding gaspar Minor corrections.

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -330,6 +330,31 @@
     "            if player_data['challenges'][\"teamDamagePercentage\"] == 1:\n",
     "                print(all_matches_data[k])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "d= {None : None}\n",
+    "print(d[None])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
